Fix silent error when generating openapi schema, add isOk and okOrThrow
